fixed styling of scedule on mobile

--- a/styling/scheduleStyles.scss
+++ b/styling/scheduleStyles.scss
@@ -40,7 +40,8 @@
 
   .event-header {
     width: 100%;
-    height: 40px;
+    display: flex;
+    justify-content: space-between;
     .type {
       float: left;
       margin-left: 30px;
